# student_backend_pro

./: .gitignore  config.yaml  docker-compose.yaml  pyproject.toml  pytest.ini  ruff.toml
app/: main.py  server.py
app/config/: base.py
app/core/: config.py  deps.py  postgresql.py  redis.py
app/utils/: log.py  profile.py
student_backend_pro/: main.py
tests/: conftest.py
tests/core/: test_config.py  test_postgresql.py
